fix #65 Dark mode

--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,10 @@ body {
   @apply selection:bg-red-500 selection:text-white;
 }
 
+html {
+  @apply dark:bg-gray-950 dark:text-white;
+}
+
 @keyframes bounceLeftToRight {
   0% {
     left: -11vw;
@@ -33,7 +37,7 @@ body {
 }
 
 .loader {
-  @apply fixed left-0 top-0 z-50 h-1 w-[20vw] translate-x-[-50%] rounded-full bg-red-500;
+  @apply fixed left-0 top-0 z-50 h-1 w-[20vw] translate-x-[-50%] rounded-full bg-red-500 dark:bg-red-400;
   animation: bounceLeftToRight 2s infinite ease-in-out;
 }
 
@@ -46,7 +50,7 @@ body {
 }
 
 .search-input {
-  @apply w-full max-w-md rounded-md border-2 border-gray-300 p-2 sm:w-11/12 md:w-5/6 lg:w-3/4 xl:w-2/3;
+  @apply w-full max-w-md rounded-md border-2  border-gray-300 bg-gray-100 p-2 text-gray-700 dark:border-gray-700 dark:bg-gray-800 dark:text-gray-300 sm:w-11/12 md:w-5/6 lg:w-3/4 xl:w-2/3;
 }
 
 .search-button {
@@ -74,7 +78,7 @@ body {
 }
 
 .result-double-subitem {
-  @apply ml-4 border-l-2 border-red-300 pl-2;
+  @apply ml-4 border-l-2 border-red-300 pl-2 dark:border-red-400;
 }
 
 .result-title {
@@ -82,11 +86,11 @@ body {
 }
 
 .result-title-description {
-  @apply italic text-gray-700;
+  @apply italic text-gray-700 dark:text-gray-400;
 }
 
 .result-title-took {
-  @apply text-xs italic text-gray-700;
+  @apply text-xs italic text-gray-700 dark:text-gray-400;
 }
 
 .result-subtitle {
@@ -98,7 +102,7 @@ body {
 }
 
 .result-quote {
-  @apply ml-4 list-none italic text-gray-700;
+  @apply ml-4 list-none italic text-gray-700 dark:text-gray-400;
 }
 
 .result-section {
@@ -110,11 +114,11 @@ body {
 }
 
 .error-message {
-  @apply relative my-4 max-w-xs rounded border border-red-400 bg-red-100 px-4 py-3 text-red-700;
+  @apply relative my-4 max-w-xs rounded border border-red-400 bg-red-100 px-4 py-3 text-red-700 dark:bg-red-900 dark:text-red-300;
 }
 
 a {
-  @apply text-red-600 hover:underline;
+  @apply text-red-600 hover:underline dark:text-red-400;
 }
 
 li {
